Gin swagger (#10)
* 接入swagger

* gin_swagger 完成接入

* add delete user
